--- a/.env.copy
+++ b/.env.copy
@@ -1,3 +1,8 @@
+# Add the projects database name
 DB_NAME='[name]_db'
+
+# Add the user. It is usually 'root'
 DB_USER='root'
-DB_PASSWORD='--Insert your password here'
+
+# Add your MySQL password
+DB_PASSWORD='--Insert your password here--'
