--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "mysql2": "^3.9.1",
     "sequelize": "^6.37.1"
   }
