--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.4",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.1",
-    "prettier": "^3.2.5",
     "sequelize": "^6.37.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.5"
   }
 }
