--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server",
+    "dev": "nodemon server",
+    "seed": "node seeds/index"
   },
   "keywords": [],
-  "author": "",
+  "author": "Group 2",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
