--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "project-2",
   "version": "1.0.0",
   "description": "<h1 align =\"center\">Project 2</h1>",
-  "main": "server.js",
+  "main": "server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
     "dev": "nodemon server",
-    "seed": "node seeds/index"
+    "seed": "node seeds/seed"
   },
   "keywords": [],
   "author": "Group 2",
