--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,8 @@
     "browser": true,
     "commonjs": true,
     "node": true,
-    // Add support for ES6 features
-    "es6": true
+    "es6": true,
+    "es2017": true
   },
   "rules": {
     "no-duplicate-case": "error",
@@ -29,7 +29,7 @@
     "no-redeclare": "error",
     "brace-style": "error",
     "indent": ["error", 2],
-    "quotes": ["error", "single", {"avoidEscape": true}],
+    "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "always"],
     "radix": "off"
   },
