--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
     "dev": "nodemon server",
-    "seed": "node seeds/seed"
+    "db:init": "mysql -u root -p < db/schema.sql && echo 'Database initialised.'",
+    "db:seed": "npm run db:init && npm run seed && echo 'Database seeded.'",
+    "seed": "node seeds/seed",
+    "start": "npm run db:seed && node server.js"
   },
   "keywords": [],
   "author": "Group 2",
