--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,5 +32,6 @@
     "semi": ["error", "always"],
     "radix": "off"
   },
-  "extends": ["prettier"]
+  "extends": ["prettier"],
+  "parser": "@babel/eslint-parser"
 }
