--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:init": "mysql -u root -p < db/schema.sql && echo 'Database initialised.'",
     "db:seed": "npm run db:init && npm run seed && echo 'Database seeded.'",
     "seed": "node seeds/seed",
-    "start": "node seeds/seed && node server"
+    "start": "npm run db:seed && node server.js"
   },
   "keywords": [],
   "author": "Group 2",
