--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.19",
     "daisyui": "^4.7.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.3.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.4"
   }
 }
